testsuite/bsc.typechecker/kind/DataDefParamGivenNumUsedNonNum.bs.bsc-out.expected
checking package dependencies
compiling DataDefParamGivenNumUsedNonNum.bs
Error: "DataDefParamGivenNumUsedNonNum.bs", line 5, column 37: (T0027)
  The numeric type `b' was found where a value type was expected.
